unpackaged/main/default/objects/Questionnaire_Section__c/Questionnaire_Section__c.object-meta.xml
<CustomObject>
    <label>Questionnaire Section</label>
    <nameField>
        <label>Section Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questionnaire Sections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>