unpackaged/main/default/objects/Questionnaire_Section__c/fields/Conditional_Object__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Object__c</fullName>
    <label>Conditional Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intake__c</fullName>
                <label>Intake</label>
            </value>
            <value>
                <fullName>Intake__r.Campaign_Case__c</fullName>
                <label>Campaign Case</label>
            </value>
            <value>
                <fullName>Intake__r.litify_pm__Client__c</fullName>
                <label>Account</label>
            </value>
            <value>
                <fullName>Intake__r.srlg_Injured_Party__c</fullName>
                <label>Injured Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>