unpackaged/main/default/objects/Questionnaire_Section__c/fields/Conditional_Operator__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Operator__c</fullName>
    <label>Conditional Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operators</valueSetName>
    </valueSet>
</CustomField>