unpackaged/main/default/objects/Questionnaire_Section__c/fields/Conditional_Value__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Value__c</fullName>
    <inlineHelpText>Criteria that would need to be met to be visible. If blank then always visible.</inlineHelpText>
    <label>Conditional Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>