unpackaged/main/default/objects/Questionnaire_Section__c/fields/External_Access__c.field-meta.xml
<CustomField>
    <fullName>External_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>External Access</label>
    <type>Checkbox</type>
</CustomField>