unpackaged/main/default/objects/Questionnaire_Section__c/fields/Final_Section__c.field-meta.xml
<CustomField>
    <fullName>Final_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only check if this is the final section of a Questionnaire.</inlineHelpText>
    <label>Final Section</label>
    <type>Checkbox</type>
</CustomField>