unpackaged/main/default/objects/Questionnaire_Section__c/fields/isTemplate__c.field-meta.xml
<CustomField>
    <fullName>isTemplate__c</fullName>
    <formula>Questionnaire__r.RecordType.Name = &quot;Template&quot;</formula>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>