unpackaged/main/default/objects/Questionnaire_Section__c/fields/Section_Category__c.field-meta.xml
<CustomField>
    <fullName>Section_Category__c</fullName>
    <label>Section Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short Form</fullName>
            </value>
            <value>
                <fullName>Long Form</fullName>
            </value>
            <value>
                <fullName>Qualifying</fullName>
                <isActive>false</isActive>
                <label>Qualifying</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>