unpackaged/main/default/objects/Questionnaire_Section__c/fields/Template_Created_From__c.field-meta.xml
<CustomField>
    <fullName>Template_Created_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template Created From</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Record must be a Templated Section</errorMessage>
        <filterItems>
            <field>Questionnaire_Section__c.isTemplate__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Questionnaire_Section__c</referenceTo>
    <relationshipLabel>Questionnaire Sections</relationshipLabel>
    <relationshipName>Questionnaire_Sections</relationshipName>
    <type>Lookup</type>
</CustomField>